test/files/syntactic/whileErrors1.jmm
class Worker extends Person {
    int idade;
    boolean is_working123;
    int[] favorite_$_Numbers;
    Identification id;

    public static void main(String[] args) {
        int x;

        while (a[4 < 4) {

        }

        while (true {

        }

        while() {

        }

        while true) {
            while (true && ) {

            }

            while ( < 4 ) {

            }
        }
    }
}